--- a/source/_posts/1.markdown语法.md
+++ b/source/_posts/1.markdown语法.md
@@ -1,8 +1,22 @@
-[TOC]
-
+---
+title: 1.markdown语法
+date: 2023-08-27
+tags: ['星海']
+categories: 星海
+id: 1.markdown语法
+---
+<!-- more -->
 # 1.markdown语法
-
-## 1.1快捷键
+# 目录
+- [1.1快捷键](#section.1)<a name="context.1"> </a>
+- [1.2文字(文本)显示](#section.2)<a name="context.2"> </a>
+- [2.1无序列表](#section.3)<a name="context.3"> </a>
+- [2.2有序列表](#section.4)<a name="context.4"> </a>
+- [2.3任务列表](#section.5)<a name="context.5"> </a>
+- [4.1行内代码](#section.6)<a name="context.6"> </a>
+- [4.2代码块](#section.7)<a name="context.7"> </a>
+------------------------------------------------  
+## [1.1快捷键](#context.1)<a name="section.1"> </a>
 
 | 名称               | 语法                                     | 快捷键                                                       |
 | ------------------ | ---------------------------------------- | ------------------------------------------------------------ |
@@ -29,7 +43,7 @@
 
 
 
-## 1.2文字(文本)显示
+## [1.2文字(文本)显示](#context.2)<a name="section.2"> </a>
 
 1. 上下标：
 
@@ -97,7 +111,7 @@
 
 # 2.列表
 
-## 2.1无序列表
+## [2.1无序列表](#context.3)<a name="section.3"> </a>
 
 代码：
 
@@ -123,7 +137,7 @@
 
 	快捷键：ctrl+shift+]
 
-## 2.2有序列表
+## [2.2有序列表](#context.4)<a name="section.4"> </a>
 
 代码：
 
@@ -143,7 +157,7 @@
 4. 第四个标题
 	快捷键为ctrl+shift+[
 
-	## 2.3任务列表
+## [2.3任务列表](#context.5)<a name="section.5"> </a>
 
 	代码：
 
@@ -176,7 +190,7 @@
 
 # 代码显示
 
-## 4.1行内代码
+## [4.1行内代码](#context.6)<a name="section.6"> </a>
 
 代码：
 
@@ -184,7 +198,7 @@
 
 快捷键：ctrl+shift+`
 
-## 4.2代码块
+## [4.2代码块](#context.7)<a name="section.7"> </a>
 
 ```
 //输出 cout
