--- a/source/_posts/小米笔试题目.md
+++ b/source/_posts/小米笔试题目.md
@@ -1,4 +1,14 @@
+---
+title: 小米笔试题目：
+date: 2023-09-03
+tags: ['星海']
+categories: 星海
+id: 小米笔试题目：
+---
+<!-- more -->
 # 小米笔试题目：
+# 目录
+------------------------------------------------  
 
 1.一套程序既可以在多个不同的操作系统上运行，最主要的原因是：
 
