--- a/source/_posts/大华笔试题.md
+++ b/source/_posts/大华笔试题.md
@@ -1,6 +1,19 @@
+---
+title: 大华笔试题
+date: 2023-09-16
+tags: ['星海']
+categories: 星海
+id: 大华笔试题
+---
+<!-- more -->
 # 大华笔试题
+# 目录
+- [选择题](#section.1)<a name="context.1"> </a>
+- [填空题](#section.2)<a name="context.2"> </a>
+- [编程题](#section.3)<a name="context.3"> </a>
+------------------------------------------------  
 
-## 选择题
+## [选择题](#context.1)<a name="section.1"> </a>
 
 1.
 
@@ -383,7 +396,7 @@ D.58,27,44,81,120,82,76,123
 
 
 
-## 填空题
+## [填空题](#context.2)<a name="section.2"> </a>
 
 1.判断一种计算机语言是否为面向对象程序设计语言的三个基本特征是()
 
@@ -460,7 +473,7 @@ printf("%d\n",i++);
 
 
 
-## 编程题
+## [编程题](#context.3)<a name="section.3"> </a>
 
 1.给你一个字符串 s表示一个员工的出勤记录，其中的每个字符用来标记当天的出勤情况(缺勤、迟到、到场)。记录中只含下面三种字符:
 A: 缺勤，L:迟到，“P:到场
